﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

FRONTEND
	Fixed: Wrong URL in default email templates ( Missing port )
	Updated: Logo and CSS

INSTALLER
	Added: panel_ports item for the --reconfigure command line option
	Fixed: Encoding issue when running installer through SSH with PuTTY

PACKAGE
	Added: Ports dialog ( FrontEnd package )

TICKETS
	Fixed #IP-1259: Layout - Text goes out of statistic bar

------------------------------------------------------------------------------------------------------------------------
1.2.1
------------------------------------------------------------------------------------------------------------------------

2015-02-06: Laurent Declercq
	RELEASE i-MSCP 1.2.1

BACKEND
	Added: Checks for a2enconf/a2disconf command availability
	Added: -h ( help ) short option ( iMSCP::Getopt module )
	Fixed: Composer cache is not cleared correctly
	Fixed: LC_MESSAGES has not expected effect in backend's scripts
	Fixed: Module's actions are called twice
	Fixed: Postfix not restarted in some contexts ( Missing iMSCP::Service module )
	Fixed: Useless instantiation of servers
	Fixed: Wrong umask when the imscp-rqst-mngr script is run through the i-MSCP Daemon
	Moved: Local DNS resolver question into bind9 installer
	Removed: Deprecated IMSCP_CLEAR_SCREEN environment variable
	Removed: imscp-local-dns-resolver script ( The bind9 initscript invokes resolvconf itself )
	Removed: policyd-weight and postgrey ( Postfix SMTP access policy delegation )

CONFIGS
	Added php5-json package ( Debian Jessie )
	Moved: Local DNS resolver parameters from the imscp.conf file to the bind.data configuration file

DAEMON
	Fixed: Messages must not be hardcoded in functions