@@ -4,6 +4,9 @@
 Git 1.2.x
 ------------------------------------------------------------------------------------------------------------------------
 
+BACKEND:
+	Fixed: Invalid argument at /usr/share/perl5/MIME/Entity.pm line 1878 ( autoreply script )
+
 FRONTEND
 	Fixed: Wrong URL in default email templates ( Missing port )
 	Updated: Logo and CSS
